# urdf-os

./: .gitignore  .mcp.example.json  ANALYSIS_AND_DEMO_PLAN.md  BRANCH_GUIDE.md  CLAUDE.md  DEMO_READY_CHECKLIST.md  FINAL_STATUS_AND_HANDOFF.md  ONSITE_CLAUDE_BRIEFING.md  QUICKSTART.md  README.md  mcp_client.py  pyproject.toml  restart_so101_demo.sh  run_eval_vla.sh  start_mcp_server.sh  start_so101_demo.sh  stop_so101_demo.sh
lerobotweb/: README.md  pyproject.toml
lerobotweb/app/: config.py  config.py:Zone.Identifier  main.py
lerobotweb/app/features/: calibrate.py  joint_data.py  teleoperate.py
lerobotweb/app/services/: joint_broadcaster.py  websocket_manager.py
lerobotweb/app/tbd/: record.py  replay.py  train.py
lerobotweb/app/types/: so_arm.py
lerobotweb/scripts/: run.py
so100_vla_demo/: ARCHITECTURE_FULL_SYSTEM.md  README.md  checkpoints.example.env  config.py  demo_script.py  llm_engine.py  mcp_client_demo.py  mcp_server.py  mock_robot_interface.py  robot_interface.py  run_demo.py  server.py
so100_vla_demo/static/: index.html
so101_vla_demo/: ARCHITECTURE_FULL_SYSTEM.md  ARCHITECTURE_HIGH_LEVEL.md  README.md  __init__.py  checkpoints.example.env  config.py  demo_orchestrator.py  demo_script.py  grasp_skill.py  llm_config.json  llm_engine.py  mcp_client_demo.py  mcp_server.py  mock_robot_interface.py  robot_interface.py  run_demo.py  search_skill.py  server.py
so101_vla_demo/static/: index.html
src/lerobot/policies/xvla/: modeling_xvla.py
src/lerobot/robots/so101_follower/: so101_follower.py
